--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
     "firebase": "^9.12.1",
     "moment": "^2.29.4",
